--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@azure/communication-calling": "^1.22.3",
-    "@azure/communication-common": "^2.3.1"
+    "@azure/communication-common": "^2.3.1",
+    "@azure/communication-identity": "^1.3.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
