--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@azure/communication-calling": "^1.22.3",
     "@azure/communication-common": "^2.3.1",
     "@azure/communication-identity": "^1.3.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "webpack": "^5.88.2",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
